--- a/Portfolio/services.html
+++ b/Portfolio/services.html
@@ -11,9 +11,10 @@
         <a href="#" class="logo">T.Z </a>
         <nav class="navigate">
             <a href="index.html" class="active">Home</a>
-            <a href="skills.html">Skills</a>
+            <a href="skills.html">About</a>
+            <a href="projects.html">Projects</a>
             <a href="services.html">Services</a>
-            <a href="projects.html">Portfolio</a>
+            
         </nav>
     
     </header>
