--- a/Portfolio/projects.html
+++ b/Portfolio/projects.html
@@ -11,52 +11,53 @@
         <a href="#" class="logo">T.Z </a>
         <nav class="navigate">
             <a href="index.html" class="active">Home</a>
-            <a href="skills.html">Skills</a>
+            <a href="skills.html">About</a>
+            <a href="projects.html">Projects</a>
             <a href="services.html">Services</a>
-            <a href="projects.html">Portfolio</a>
+            
         </nav>
     
     </header>
     <h1>My Projects</h1>
     <div class="pro">
     <div class="weather-app">
-    <img src="#"/><br>
+    <img src="image/weatheapp.png" class="img-project"/><br><br>
     <span class="live">Weather<br>
-        App Project</span><br>
-    <a href="#" class="github">GitHub</a><br>
-    <a href="#" class="live-demo">Live Demo</a>
+        App Project</span><br><br>
+    <a href="https://github.com/Thandi06/Vanilla-weatherApp.git" class="github" target="_blank">GitHub</a><br>
+    <a href="https://thandi-weather-app.netlify.app/" class="live-demo" target="_blank">Live Demo</a>
     </div>
     <div class="convect">
-        <img src="#"/><br>
+        <img src="image/convert.png" class="img-project"/><br>
         <span class="live">Temperature
             <br>Convector 
             <br>Project</span><br>
-        <a href="#" class="github">GitHub</a><br>
-        <a href="#" class="live-demo">Live Demo</a>
+        <a href="https://github.com/Thandi06/temp-converter.git" class="github" target="_blank">GitHub</a><br>
+        <a href="https://thanditempconverter.netlify.app/" class="live-demo" target="_blank">Live Demo</a>
     </div>
     <div class="page">
-        <img src=""/><br>
+        <img src="image/landingpage.png" class="img-project"/><br>
         <span class="live">Landing <br>
             Page <br>
             Project</span><br>
-        <a href="#" class="github">GitHub</a><br>
-        <a href="#" class="live-demo">Live Demo</a>
+        <a href="https://github.com/Thandi06/landing-page-task.git" target="_blank" class="github" target="_blank">GitHub</a><br>
+        <a href="https://zikhokhilepage.netlify.app/" target="_blank" class="live-demo" target="_bank">Live Demo</a>
     </div>
     <div class="expense">
-        <img src=""/><br>
+        <img src="image/expensetracker.png" class="img-project"/><br>
         <span class="live">Expense 
             <br>Tracker
         <br>Project</span><br>
-        <a href="#" class="github">GitHub</a><br>
-        <a href="#" class="live-demo">Live Demo</a>
+        <a href="https://github.com/Thandi06/expense-tracker.git" class="github" target="_blank">GitHub</a><br>
+        <a href="https://thandiexpensetracker.netlify.app/" class="live-demo" target="_blank">Live Demo</a>
     </div>
     <div class="yoga">
-        <img src=""/><br>
+        <img src="image/yoga.png" class="img-project"/><br>
         <span class="live">Yoga Website
             <br>Project
         </span><br>
-        <a href="#" class="github">GitHub</a><br>
-        <a href="#" class="live-demo">Live Demo</a>
+        <a href="https://github.com/Thandi06/hobby.git" class="github" target="_blank">GitHub</a><br>
+        <a href="https://thandikhokhihobby.netlify.app/" class="live-demo" target="_blank">Live Demo</a>
     </div>
     </div>
 
