--- a/Landing page/indexLandingPage.html
+++ b/Landing page/indexLandingPage.html
@@ -91,20 +91,16 @@
         <div class="signUp">
             <header><strong>SignUp to become one of Us🤗</strong></header>
             <form id="app">
-                <input type="text" id="reg-username" placeholder="Username" required><br>
-                <input type="email" id="email" placeholder="Email" required><br>
-                <input type="password" id="reg-password" placeholder="Password" required><br>
-                <input type="password" id="confirm-password" placeholder="Confirm Password" required><br>
+                <input type="text"  placeholder="Username" required><br>
+                <input type="email" placeholder="Email" required><br>
+                <input type="password" placeholder="Password" required><br>
+                <input type="password" placeholder="Confirm Password" required><br>
                 <label>
-                <input type="checkbox" id="show-reg-password"> Show Password
+                <input type="checkbox"> Show Password
                 </label><br>
-                <button type="button" id="register-button">Register</button>
-                <div id="message"></div>
+                <button type="button" >Register</button>
         </div>
         </div>
-        <p>
-            
-        </p>
         <section>
             <strong>contact details:</strong>
             <span class="details">email:</span>efundainternetcafe@gmail.com
