--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -30,7 +30,7 @@
         user-friendly interfaces that make a lasting impact.
         </p>
         <div>
-            <button><a href="#">Download my Resume</a></button>
+            <button><a href="https://www.shecodes.io/graduates/136321-thandi-zikhokhile-sithole" target="_blank">Download my Certificates</a></button>
         </section>
             
         </div>
