--- a/Portfolio/skills.html
+++ b/Portfolio/skills.html
@@ -103,6 +103,9 @@
     </div>
     </div>
 </div>
+<div class="codes">
+    <img src="image/skills.png" target="_blank"/>
+</div>
 </div>
 </body>
 </html>
